feat(ui): terminal for member-cluster pod (#426)
* fix(api): client.Config use ConfigForMemberClusterFromRequest instead of configFromRequest

Signed-off-by: warjiang <1096409085@qq.com>

* fix(api): increase timeout for terminal connection

Signed-off-by: warjiang <1096409085@qq.com>

* feat(ui): terminal for member-cluster pod

Signed-off-by: warjiang <1096409085@qq.com>

---------

Signed-off-by: warjiang <1096409085@qq.com>

--- a/ui/apps/dashboard/tsconfig.json
+++ b/ui/apps/dashboard/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "playwright.config.ts", "e2e"],
+  "include": ["src", "playwright.config.ts", "e2e", "typings.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
