--- a/ui/apps/dashboard/package.json
+++ b/ui/apps/dashboard/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\" --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "i18n:init": "i18n-tool init",
     "i18n:scan": "i18n-tool scan",
@@ -33,11 +33,12 @@
     "@karmada/i18n-tool": "workspace:*",
     "@karmada/terminal": "workspace:*",
     "@karmada/utils": "workspace:*",
-    "@microsoft/fetch-event-source": "^2.0.1",
     "@kubernetes/client-node": "^1.3.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@monaco-editor/react": "^4.6.0",
     "@tanstack/react-query": "^5.90.20",
     "@uidotdev/usehooks": "^2.4.1",
+    "@xterm/xterm": "^6.0.0",
     "antd": "^6.2.0",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
@@ -51,6 +52,7 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^14.1.3",
     "react-router-dom": "^7.13.0",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.5.3",
     "yaml": "^2.8.2",
     "zustand": "^5.0.9"
@@ -62,6 +64,7 @@
     "@types/node": "^20.12.11",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.53.1",
     "@vitejs/plugin-react": "^5.1.2",
