fix typo in values.yaml anodeSelector to nodeSelector
Signed-off-by: Aravind <gmarav005@gmail.com>

--- a/charts/karmada-dashboard/values.yaml
+++ b/charts/karmada-dashboard/values.yaml
@@ -80,7 +80,7 @@ api:
     #   cpu: 100m
     #   memory: 128Mi
   ## @param api.nodeSelector node selector of the api
-  anodeSelector: { }
+  nodeSelector: { }
   ## @param api.affinity affinity of the api
   affinity: { }
   ## @param api.tolerations tolerations of the api
