--- a/charts/karmada-dashboard/templates/ingress.yaml
+++ b/charts/karmada-dashboard/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "karmada-dashboard.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
+{{- $fullName := printf "%s-web" (include "karmada-dashboard.name" .) -}}
+{{- $svcPort := .Values.web.service.port -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
